--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Jonathan Matthey
 description: Portfolio
 author: Jonathan Matthey
-analytics: UA-30141486-2
+analytics: 
 exclude: [ _design, README ]
 # baseurl: "http://www.jonathanmatthey.com/redesign/_site/"
-baseurl: "/"
+baseurl: "http://lips.github.io/jekyll-grid-portfolio-theme/"
